--- a/FFFCU_calc.html
+++ b/FFFCU_calc.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <link rel="stylesheet" href="style.css">  
+    <title>Loan Calculator</title>
+    <link rel="stylesheet" href="style.css">  
 </head>
 <body>
     <ol>
